Some composting reflections tests are broken https://bugs.webkit.org/show_bug.cgi?id=139889

Reviewed by Tim Horton.

Source/WebCore:

When creating layer clones for reflections, we'd clobber the layer background
color via resetting the custom appearance on the clone. Fix by having
PlatformCALayerMac::updateCustomAppearance() only do work when the appearance changes.

Some other drive-by nullptr changes, and include layer IDs in debug layer names.

Covered by existing pixel tests.

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::setName):
(WebCore::GraphicsLayerCA::swapFromOrToTiledLayer):
* platform/graphics/ca/mac/PlatformCALayerMac.mm:
(PlatformCALayerMac::updateCustomAppearance):
(PlatformCALayerMac::tiledBacking):

LayoutTests:

New image baselines.

* platform/mac/compositing/reflections/animation-inside-reflection-expected.png:
* platform/mac/compositing/reflections/compositing-change-inside-reflection-expected.png:
* platform/mac/compositing/reflections/masked-reflection-on-composited-expected.png:
* platform/mac/compositing/reflections/reflection-opacity-expected.png:
* platform/mac/compositing/reflections/transform-inside-reflection-expected.png:

Canonical link: https://commits.webkit.org/158119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178002 268f45cc-cd09-0410-ab3c-d52691b4dbfc